--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "amazon-cognito-identity-js": "^3.0.10",
+    "aws-sdk": "^2.437.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -31,7 +33,7 @@
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "angular-oauth2-oidc": "^5.0.2",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
